--- a/src/main/resources/view-src/rack.html
+++ b/src/main/resources/view-src/rack.html
@@ -4,8 +4,8 @@
 	<head>
 		<title>{{#i18n}}rack.title{{/i18n}}</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <script src="/rack/public/dist/entcore/ng-app.js" type="text/javascript" id="context"></script>
-		<script src="/rack/public/dist/application.js" type="text/javascript"></script>
+        <script src="/assets/js/entcore/ng-app.js?v=@@VERSION" id="context" type="text/javascript"></script>
+		<script type="text/javascript" src="/rack/public/dist/application.js?v=@@VERSION"></script>
 		<script type="text/ng-template" id="empty"></script>
 	</head>
 
