feat: #PEDAGO-3602, create dto and client

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Rack</title>
+		<title>{{#i18n}}rack.title{{/i18n}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" id="favicon" href="" />
   </head>
